# split-personality-stuff

./: .env.template  .gitattributes  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  create_test_responses.py  download_model.py  pyproject.toml  quickrun.py  requirements-local.txt  requirements-minimal.txt  setup.sh  simple_test.py  test_azure.py  test_featherless.py  test_find_nesting.py  test_gemma_chat.py  test_gemma_format.py  test_gemma_generation.py  test_gemma_generation2.py  test_gemma_minimal.py  test_gemma_tiny.py  test_generation.py  test_groq.py  test_groq_mmlu.py  test_llm_basic.py  test_local_client.py  test_local_debug.py  test_local_simple.py  test_mmlu_completions.py  test_mmlu_question.py  test_prompt_format.py  test_prompt_preview.py  test_trace_issue.py
configs/: datasets.yaml  hints.yaml  models.yaml
docs/: LOCAL_MODELS.md
scripts/: 00_download_format.py  01_generate_completion.py  01_generate_completion_parallel.py  02_extract_answer.py  03_detect_switches.py  04_verify_cot.py  05_compute_faithfulness.py
scripts/utils/: __init__.py  completion_utils.py  export_switched_data.py
src/: __init__.py
src/clients/: __init__.py  anthropic_client.py  azure_client.py  base.py  factory.py  featherless_client.py  google_client.py  groq_client.py  local_client.py  openai_client.py
src/datasets/: __init__.py  base.py  mmlu.py  registry.py
src/local/: __init__.py  model_handler.py  parallel_pipeline.py
src/prompts/: __init__.py  builder.py
src/utils/: __init__.py  config.py  jsonl.py  logging_setup.py  paths.py
(+28 files in other folders)
